# clausefinder

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
app/: streamlit_app.py
data/: manifest.json
eval/: eval_set.jsonl  results.md  run_eval.py
scripts/: ask.py  build_all.py  check_gemini.py  inspect_parse.py  verify_db.py  verify_index.py
src/clausefinder/: __init__.py  config.py
src/clausefinder/index/: build_index.py  embed.py
src/clausefinder/ingest/: download.py  parse_html.py  parse_pdf.py  parse_structured.py  records.py
src/clausefinder/process/: chunk.py  clean.py  normalize.py
src/clausefinder/rag/: generate.py  prompt.py  retrieve.py
