[project]
name = "clausefinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Praveen Agnihotry", email = "praveen.agnihotry@ext.uni.lu" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
clausefinder = "clausefinder:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
