[project]
name = "clausefinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Praveen Agnihotry", email = "praveen.agnihotry@ext.uni.lu" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "google-genai>=2.9.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[project.scripts]
clausefinder = "clausefinder:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
